syntax = "proto3";

package hello;

service Hello {
    rpc helloWorld (helloWorldRequest) returns (helloWorldResponse) {}
}

message helloWorldRequest {
    string message = 1;
}

message helloWorldResponse {
    bool status = 1;
}